# BVH-Test

./: CMakeLists.txt  License.txt  README  README.md
quad/: Program.cpp  Program.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
quad/shaders/: quadFrag.glsl
raytest/: RayTracerTest.cpp  interface.h  smallpt.cpp  smallpt.h
src/: BBox.cpp  BBox.h  BVH.cpp  BVH.h  BVHTree.cpp  BVHTree.h  IntersectionInfo.h  Log.cpp  Log.h  Object.h  Primitives.h  Profiler.h  Ray.h  Renderer.h  Shape.h  Sphere.h  Stopwatch.h  Vector3.h  benchmark.cpp  bvh.cpp  bvh.h  camera.cpp  camera.h  interface.h  mei.h  obj.hpp  profiler.cpp  profiler.h  randoms.cpp  randoms.h  scene.cpp  scene.h  smallpt.cpp  smallpt.h
src/camera/: camera.cpp  camera.h
src/core/: Shapes.cpp  api.cpp  api.h  camera.cpp  camera.h  integrators.cpp  integrators.h  interactions.cpp  interactions.h  parallel.cpp  parallel.h  paramset.cpp  paramset.h  primitives.cpp  primitives.h  progressreporter.cpp  progressreporter.h  rendercontext.cpp  rendercontext.h  scene.cpp  scene.h  shapes.h  stats.cpp  stats.h  stringprint.h
src/integrator/: integrators.cpp  integrators.h  naiveintegrator.cpp  naiveintegrator.h  naiveintegrator.h.cpp
src/main/: RayTracerTest.cpp
src/random/: naivesampler.cpp  naivesampler.h  randoms.cpp  randoms.h  samplers.cpp  samplers.h
src/types/: 2d.cpp  2d.h  3d.cpp  3d.h  Vector3.h  points.h
src/utils/: modelimporter.cpp  modelimporter.h  profiler.h
tests/: camera-test.cpp  film-test.cpp  objfile-test.cpp  parallel-test.cpp
tests/gtest/: gtest_main.cc
visualize/: BVHTree.cpp  BVHTree.h  Primitives.h  RayTracerTest.cpp  Vector3.h  asyncTask.cpp  asyncTask.h  camera.cpp  camera.h  gui.cpp  interface.cpp  interface.h  main.cpp  raytracer.cpp  raytracer.h  scene.cpp  scene.h  setting.cpp  setting.h  smallpt.cpp  smallpt.h
visualize/core/: parallel.h  progressreporter.cpp  progressreporter.h  stats.cpp
